refactor: tests